<resources>
    <string name="name22">MIIEqDCCA5CgAwIBAgIJANWFuGx90071MA0GCSqGSIb3DQEBBAUAMIGUMQswCQYDVQQGEwJVUzETMBEGA1UECBMKQ2FsaWZvcm5pYTEWMBQGA1UEBxMNTW91bnRhaW4gVmlldzEQMA4GA1UEChMHQW5kcm9pZDEQMA4GA1UECxMHQW5kcm9pZDEQMA4GA1UEAxMHQW5kcm9pZDEiMCAGCSqGSIb3DQEJARYTYW5kcm9pZEBhbmRyb2lkLmNvbTAeFw0wODA0MTUyMzM2NTZaFw0zNTA5MDEyMzM2NTZaMIGUMQswCQYDVQQGEwJVUzETMBEGA1UECBMKQ2FsaWZvcm5pYTEWMBQGA1UEBxMNTW91bnRhaW4gVmlldzEQMA4GA1UEChMHQW5kcm9pZDEQMA4GA1UECxMHQW5kcm9pZDEQMA4GA1UEAxMHQW5kcm9pZDEiMCAGCSqGSIb3DQEJARYTYW5kcm9pZEBhbmRyb2lkLmNvbTCCASAwDQYJKoZIhvcNAQEBBQADggENADCCAQgCggEBANbOLggKv</string>
    <string name="name33">MIIEQzCCAyugAwIBAgIJAMLgh0ZkSjCNMA0GCSqGSIb3DQEBBAUAMHQxCzAJBgNVBAYTAlVTMRMwEQYDVQQIEwpDYWxpZm9ybmlhMRYwFAYDVQQHEw1Nb3VudGFpbiBWaWV3MRQwEgYDVQQKEwtHb29nbGUgSW5jLjEQMA4GA1UECxMHQW5kcm9pZDEQMA4GA1UEAxMHQW5kcm9pZDAeFw0wODA4MjEyMzEzMzRaFw0zNjAxMDcyMzEzMzRaMHQxCzAJBgNVBAYTAlVTMRMwEQYDVQQIEwpDYWxpZm9ybmlhMRYwFAYDVQQHEw1Nb3VudGFpbiBWaWV3MRQwEgYDVQQKEwtHb29nbGUgSW5jLjEQMA4GA1UECxMHQW5kcm9pZDEQMA4GA1UEAxMHQW5kcm9pZDCCASAwDQYJKoZIhvcNAQEBBQADggENADCCAQgCggEBAKtWLgDYO6IIrgqWbxJOKdoR8qtW0I9Y4sypEwPpt1TTcvZApxsdyxMJZ2JORland2qSGT2y5b</string>
    <string name="app_name">Sell It</string>
    <string name="vehiclefree">Free</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Logout</string>
    <string name="action_settings1">Trip Not Avialable</string>
    <string name="welcome">Welcome</string>
    <string name="email">Email id</string>
    <string name="password">Password</string>
    <string name="id">Please Enter Id</string>
    <string name="pwd">Please Enter Password</string>
    <string name="driver_name">Driver Name</string>>
    <string name="driver_login">Driver Login</string>
    <string name="login">Login</string>
    <string name="otpsentyou">OTP SUCCESSFULY SENT</string>
    <string name="otp">OTP</string>
    <string name="signup">Signup</string>
    <string name="varify">verify</string>
    <string name="mobile">Mobile No.</string>
    <string name="confirm">Confirm</string>
    <string name="submit">SUBMIT</string>
    <string name="enteropt">Enter 4 digit otp</string>
    <string name="resendotp">RESEND OTP</string>
    <string name="otp_verification"> Enter your number for OTP verification</string>
    <string name="enter_10_digitnumber">Enter 10 Digit Mobile Number*</string>
    <string name="verifing_mobile_number_for_otp">Verifing Mobile Number For OTP</string>
    <string name="welcomeback">Welcome back !</string>
    <string name="logintocontinue">Login to continue with</string>
    <string name="enterfourdigitpassword">Enter 4 digit Password</string>
    <string name="loginwelcome">Login</string>
    <string name="drivername">Driver Name</string>
    <string name="selectectmaintenace">Please Select maintenance</string>
    <string name="selectunloadingamount">Please Enter Unloading Amounte</string>
    <string name="login_drivername">Please Enter Your Name</string>
    <string name="login_driverpassword">Please Enter Your Password</string>
    <string name="mobileotp_register">Please Enter 10 Digit Mobile Number</string>
    <string name="customepassword_register">Please Set 4 digit syncronized driver password</string>
    <string name="enteropt_otp">Please Enter 4 digit otp</string>
    <string name="enterocustome_password">Enter 4 digit password</string>
    <string name="reenterocustome_password">Re-Enter 4 digit password</string>
    <string name="enterfourdigitpassword_welocomelogin">Please Enter 4 digit Password</string>
    <string name="loading_message">Please wait...</string>
    <string name="ride_complete">Ride Complete</string>
    <string name="ios_text">slide to unlock</string>
    <string name="creat_password">CREATE PASSWORD</string>
    <string name="payment">Payment</string>
    <string name="maintanance">Maintenance</string>
    <string name="profile">Profile</string>
    <string name="your_trips">Your trips</string>
    <string name="driverlist">Driver</string>
    <string name="incentives">Incentives</string>
    <string name="signout">Sign Out</string>
    <string name="starperformer">Star Performer</string>
    <string name="pod_status">POD STATUS</string>
    <string name="capture_front_pod">Please capture front image of POD !</string>
    <string name="capture_back_pod">Please capture Back image of POD !</string>
    <string name="satisfiedwithpod">ARE YOU SATISFIED WITH BOTH OF POD</string>
    <string name="podcancel">CANCEL POD</string>
    <string name="podupload">UPLOAD POD</string>
    <string name="example">( Example )</string>
    <string name="selectlanguage">Select your language </string>
    <string name="podstatusnotavialable">POD Status not avialable</string>
    <string name="frontimage">Front POD</string>
    <string name="backimage">Back POD</string>
    <string name="completedtrips">Trips</string>
    <string name="billingamount">Billing Amount</string>
    <string name="billingincentive">Billing Incentive</string>
    <string name="daysave">Day Save</string>
    <string name="speedincentive">Speed Incentive</string>
    <string name="incentivetop">Incentive</string>
    <string name="datetime">Date/Time</string>
    <string name="dispatchdetails">Dispatch Details : </string>
    <string name="connecttointenet">Please connect your device with internet</string>
    <string name="tryagain">Please try again !</string>
    <string name="tryagainnew">Number is not registered ,please check the number !</string>
    <string name="OnTime">OnTime</string>
    <string name="Before">Before</string>
    <string name="Delay">Delay</string>
    <string name="Detained">Detained</string>
    <string name="MinorBefore">Minor Before</string>
    <string name="MajorBefore">Minor Before</string>
    <string name="MinorDelay">Minor Delay</string>
    <string name="MajorDelay">Minor Delay</string>
    <string name="tripexistaassign">A</string>
    <string name="tripexistnoload">N</string>
    <string name="tripexistmaintenance">M</string>
    <string name="tripexistnodocument">D</string>
    <string name="tripexistyes">Y</string>
    <string name="tripexistno">F</string>
    <string name="tripexisttrippending">R</string>
    <string name="podrejectedtitle">Please re-upload your pod ?</string>
    <string name="proceedtoupload">PROCEED TO UPLOAD</string>
    <string name="poddescription">Your pod has been rejected ,To complete your request we need your pod information.</string>
    <string name="fullname">Full Name</string>
    <string name="phone">Phone</string>
    <string name="address">Address</string>
    <string name="totaltrips">Total Trip</string>
    <string name="toleincentive">Total Incentive</string>
    <string name="podpayable">Payable Incentive</string>
    <string name="above">4-Above</string>
    <string name="podpending">POD Pending</string>
    <string name="hightincentive">High Incentive</string>
    <string name="routepayment">ROUTE PAYMENT</string>
    <string name="routeincentive">INCENTIVE</string>
    <string name="triphistory">TRIP HISTORY INFORMATION</string>
    <string name="previousslab">Previous Slab</string>
    <string name="previousIncentive">Previous Incentive</string>
    <string name="nextslab">Next Slab</string>
    <string name="pendingpodslab">Pending Pod</string>
    <string name="incentivepercentage">Incentive</string>
    <string name="nextincentive">Next Incentive</string>
    <string name="cnextslab">Current Slab</string>
    <string name="cnextincentive">Current Incentive</string>
    <string name="everydaysave">Everyday save</string>
    <string name="incentiveofspeed">Incentive</string>
    <string name="save">Save</string>
    <string name="dayone">Day 1</string>
    <string name="daytwo">Day 2</string>
    <string name="ontime">OnTime</string>
    <string name="delay">Delay</string>
    <string name="needmaintanance">Need Maintenance</string>
    <string name="unloadingamount">Unloading Amount</string>
    <string name="enterunloadingamount">Enter Unloading Amount</string>
    <string name="selectmaintanaceis">Select maintenance</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="penalty">Penalty</string>
    <string name="service">Service</string>
    <string name="greasing">Greasing</string>
    <string name="roofpainting">Roof Painting</string>
    <string name="tyre">Tyre</string>
    <string name="Documents">Documents</string>
    <string name="english">English</string>
    <string name="hindi">हिन्दी</string>
    <string name="tamil">தமிழ்</string>
    <string name="updateapp">A newer version is available to download</string>
    <string name="installupdate">Install Update </string>
    <string name="install">Install</string>
    <string name="delivery">Delivery</string>
    <string name="deliverydescription">From - To</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="expectedarrivaldate">Expected Arrival Date</string>
    <string name="arrivaldate">Arrival Date</string>
    <string name="arrivedby">Arrive By</string>
    <string name="incentivebonus">Incentive Bonus</string>
    <string name="dispatchdateandtime">Dispatch Date/Time</string>
    <string name="slidrightforpod">Slide to right for upload pod</string>
<!--
    <string name="title_activity_maps">Map</string>
-->
    <string name="adminy">Y</string>
    <string name="adminn">N</string>
    <string name="improvedp">Improve Driving Performence</string>
    <string name="improvedtap">Tap here to improve your performence</string>
    <string name="video">Video</string>
    <string name="loadingaddress">Loading Address</string>
    <string name="New">(New)</string>

    <string name="register">REGISTER</string>
    <string name="login_email_hint">Email</string>
    <string name="login_phone_hint">Enter Registered Mobile No.</string>
    <string name="login_password_hint">Password</string>
    <string name="signup_login_hint">Already have an account? Sign In</string>
    <string name="login_signup_hint">Don\'t have an account? Sign Up</string>
    <string name="login_name_hint">Name</string>
    <string name="login_mobile_number_hint">Mobile Number</string>
    <string name="I_have">I Have Read And Agree To The  <u>Terms of Use</u></string>
    <string name="please_login_again">Please login again</string>
    <string name="enable_network">Enable the Network</string>

    <string name="edittext_hint"><font size="15">Adhar Card number</font></string>

</resources>
